# src/main/java/com/capgemini/library/management/project/library_management/controller/BookController.java
@@ -21,31 +21,23 @@ public class BookController implements BooksApi {
     @Autowired
     BookAllocationService bookAllocationService;
 
-
-//    @Override
-//    public ResponseEntity<BookResponseDTO> addBook(@Valid @RequestBody BookRequestDTO bookRequestDTO) {
-//        Integer bookId = bookAllocationService.addBook(bookRequestDTO);
-//        BookResponseDTO responseDTO = new BookResponseDTO();
-//        responseDTO.setId(bookId);
-//        return new ResponseEntity<>(responseDTO, HttpStatus.OK);
-//    }
-
     @Override
-    public ResponseEntity<BookResponseDTO> addBook(@Valid @RequestBody BookRequestDTO bookRequestDTO) throws LibraryManagementException {
+    public ResponseEntity<BookDTO> addBook(@Valid @RequestBody BookDTO bookDTO) {
         try {
-            Integer bookId = bookAllocationService.addBook(bookRequestDTO);
-            BookResponseDTO responseDTO = new BookResponseDTO();
+            Integer bookId = bookAllocationService.addBook(bookDTO);
+            BookDTO responseDTO = new BookDTO();
 
-            responseDTO.setId(bookId);
-            responseDTO.setTitle(bookRequestDTO.getTitle());
-            responseDTO.setAuthor(bookRequestDTO.getAuthor());
-            responseDTO.setIsbn(bookRequestDTO.getIsbn());
-            responseDTO.setPublishYear(bookRequestDTO.getPublishYear());
-            responseDTO.setGenreIds(bookRequestDTO.getGenreIds());
-            responseDTO.setAddedDate(OffsetDateTime.now(ZoneOffset.UTC));
-            responseDTO.setUpdatedDate(OffsetDateTime.now(ZoneOffset.UTC));
+            responseDTO.setId(Long.valueOf(bookId));
+            responseDTO.setTitle(bookDTO.getTitle());
+            responseDTO.setAuthor(bookDTO.getAuthor());
+            responseDTO.setIsbn(bookDTO.getIsbn());
+            responseDTO.setPublishYear(bookDTO.getPublishYear());
+            responseDTO.setGenreIds(bookDTO.getGenreIds());
+//            responseDTO.setAddedDate(OffsetDateTime.now(ZoneOffset.UTC));
+//            responseDTO.setUpdatedDate(OffsetDateTime.now(ZoneOffset.UTC));
 
             return new ResponseEntity<>(responseDTO, HttpStatus.CREATED);
+
         } catch (LibraryManagementException ex) {
             if (ex instanceof DuplicateISBNException) {
                 BookResponseWithErrorsDTO errorResponseDTO = new BookResponseWithErrorsDTO();
@@ -71,8 +63,44 @@ public class BookController implements BooksApi {
 
     }
 
+    @Override
+    public ResponseEntity<BookDTO> getBookById(Integer id){
+        BookDTO bookDTO = bookAllocationService.getBookById(id);
+        try {
+            return new ResponseEntity<>(bookDTO, HttpStatus.OK);
+        } catch (LibraryManagementException ex) {
+            if (ex instanceof DuplicateISBNException) {
+                BookResponseWithErrorsDTO errorResponseDTO = new BookResponseWithErrorsDTO();
+                ErrorDTO error = new ErrorDTO();
+                error.setCode("DUPLICATE_ISBN");
+                error.setMessage("ISBN already exists in the library");
+                error.setTimestamp(OffsetDateTime.now(ZoneOffset.UTC));
+                errorResponseDTO.setError(error);
+                return new ResponseEntity<>(errorResponseDTO, HttpStatus.CONFLICT);
+            } else {
+                // Handle other LibraryManagementException types
+                // You can log the exception for further analysis
+                ex.printStackTrace();
+                BookResponseWithErrorsDTO errorResponseDTO = new BookResponseWithErrorsDTO();
+                ErrorDTO error = new ErrorDTO();
+                error.setCode("INTERNAL_SERVER_ERROR"); // Set appropriate error code
+                error.setMessage("Internal server error occurred");
+                error.setTimestamp(OffsetDateTime.now(ZoneOffset.UTC));
+                errorResponseDTO.setError(error);
+                return new ResponseEntity<>(errorResponseDTO, HttpStatus.INTERNAL_SERVER_ERROR);
+            }
+    }
+
+//    @Override
+//    public ResponseEntity<PageResponseDTO> getAllBooks(
+//            @RequestParam(defaultValue = "0") Integer page,
+//            @RequestParam(defaultValue = "10") Integer size) {
+//
+//        PageResponseDTO pageResponseDTO = (PageResponseDTO) bookAllocationService.getAllBooks(page, size);
+//        return new ResponseEntity<>(pageResponseDTO.pageSize(), pageResponseDTO);
+//    }
 //        @Override
-//    public ResponseEntity<PageResponseDTO<BookResponseDTO>> getAllBooks(
+//    public ResponseEntity<PageResponseDTO<BookDTO>> getAllBooks(
 //            @RequestParam(defaultValue = "0") Integer page,
 //            @RequestParam(defaultValue = "10") Integer size) {
 //
@@ -80,18 +108,14 @@ public class BookController implements BooksApi {
 //
 //        Page<Book> bookPage = bookAllocationService.getAllBooks(pageRequest);
 //
-//        List<BookResponseDTO> responseList = bookPage.getContent().stream()
-//                .map(book -> new BookResponseDTO(book.getId(), book.getTitle(), book.getAuthor(), book.getIsbn(), book.getPublishYear(), book.getGenreIds().stream().map(Long::valueOf).collect(Collectors.toList())))
+//        List<BookDTO> responseList = bookPage.getContent().stream()
+//                .map(book -> new BookDTO(book.getId(), book.getTitle(), book.getAuthor(), book.getIsbn(), book.getPublishYear(), book.getGenreIds().stream().map(Long::valueOf).collect(Collectors.toList())))
 //                .collect(Collectors.toList());
 //
-//        PageResponseDTO<BookResponseDTO> pageResponse = new PageResponseDTO<>(
+//        PageResponseDTO<BookDTO> pageResponse = new PageResponseDTO<>(
 //                responseList, bookPage.getTotalPages(), bookPage.getTotalElements());
 //
 //        return new ResponseEntity<>(pageResponse, HttpStatus.OK);
 //    }
 
-//    public ResponseEntity<List<BookResponseDTO>> getAllBooks() {
-//        List<BookResponseDTO> BookDTOs = bookAllocationService.getAllBooks();
-//        return new ResponseEntity<>(BookDTOs, HttpStatus.OK);
-//    }
 }
